--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,7 @@
     <!-- Import Semantic UI CSS -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/semantic.min.css"></link>
     
-    <link rel="stylesheet" href="assets/css/AdminLTE.css">
-    <!-- AdminLTE Skins. Choose a skin from the css/skins
-      folder instead of downloading all of them to reduce the load. -->
-    <link rel="stylesheet" href="assets/css/skins/_all-skins.css">
-    
-    <!--
+        <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -37,7 +32,7 @@
     -->
     <title>React App</title>
   </head>
-  <body class="skin-white sidebar-mini">
+  <body class="sidebar-mini">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
